--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,8 @@ license_file = LICENSE
 
 [coverage:report]
 fail_under = 100
+
+[isort]
+line_length = 119
+multi_line_output = 5
+include_trailing_comma = True
