Be stricter when running tests.
* Move as many settings as possible for coverage and isort to setup.cfg
* Require 100% BRANCH coverage
* Exclude __init__.py, it's handled by integration tests
* Exclude compat.py, half of it is handled when testing python2 and the rest when testing python3
* Make sure isort checks __init__.py files (it's excluded by default)
* Make sure conllu and tests directories are recognized as first_party and get grouped as such

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,22 @@ license_file = LICENSE
 
 [coverage:report]
 fail_under = 100
+exclude_lines =
+	pragma: no cover
+	def __repr__
+
+[coverage:run]
+branch = True
+source = conllu
+omit =
+	conllu/compat.py
+	conllu/__init__.py
 
 [isort]
 line_length = 119
 multi_line_output = 5
 include_trailing_comma = True
+not_skip = __init__.py
+known_first_party =
+	conllu
+	tests
