Change how tests are run with tox.
* Run all tests in all environments
* Skip integration tests when running coverage (--blacklist integratoin) to make sure unittests really cover all corners

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,16 @@
 
 [tox]
 envlist =
-  {py27,py34,py35,py36,py37}
-  flake8
-  isort
+  py27,py34,py35,py36,py37
+  coverage,flake8,isort
+
+[testenv]
+whitelist_externals =
+  find
+setenv =
+  PYTHONWARNINGS=once::DeprecationWarning
+commands =
+  python runtests.py
 
 [cleanup]
 commands =
@@ -17,6 +24,7 @@ commands =
   find {toxinidir} -type d -path "*.egg-info" -delete
 
 [testenv:flake8]
+# Note: Settings for flake8 exists in the setup.cfg file
 changedir = {toxinidir}
 deps = flake8
 commands =
@@ -24,19 +32,18 @@ commands =
   {[cleanup]commands}
 
 [testenv:isort]
+# Note: Settings for isort exists in the setup.cfg file
 changedir = {toxinidir}
 deps = isort
 commands =
   isort --recursive --check-only --diff conllu tests
   {[cleanup]commands}
 
-[testenv]
-whitelist_externals =
-  find
-setenv =
-  PYTHONWARNINGS=once::DeprecationWarning
+[testenv:coverage]
+# Note: Settings for coverage exists in the setup.cfg file
+changedir = {toxinidir}
 commands =
-  coverage run --source conllu runtests.py
+  coverage run runtests.py --blacklist integration
   coverage report -m
   {[cleanup]commands}
 deps =
