--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: python
 sudo: false
 cache: pip
-python:
- - "3.6"
- - "3.5"
- - "3.4"
- - "2.7"
 install: pip install tox-travis
 script: tox
+matrix:
+  fast_finish: true
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
+    - python: "3.6"
+    - python: "3.5"
+    - python: "3.4"
+    - python: "2.7"
