Make sure we run coverage on CI too.

--- a/tox.ini
+++ b/tox.ini
@@ -42,12 +42,11 @@ commands =
 [testenv:coverage]
 # Note: Settings for coverage exists in the setup.cfg file
 changedir = {toxinidir}
+deps = coverage
 commands =
   coverage run runtests.py --blacklist integration
   coverage report -m
   {[cleanup]commands}
-deps =
-  coverage
 
 [travis]
 python =
@@ -55,4 +54,4 @@ python =
   3.4: py34
   3.5: py35
   3.6: py36
-  3.7: py37, flake8, isort
+  3.7: py37, coverage, flake8, isort
