--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ script: tox
 matrix:
   fast_finish: true
   include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
+    - python: "3.7"
     - python: "3.6"
     - python: "3.5"
     - python: "3.4"
