--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ script: tox
 matrix:
   fast_finish: true
   include:
+    - python: "3.8"
     - python: "3.7"
     - python: "3.6"
     - python: "3.5"
