Always fail when coverage is below 100%.

--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ changedir = {toxinidir}
 deps = coverage
 commands =
   coverage run runtests.py --blacklist integration
-  coverage report -m
+  coverage report -m --fail-under=100
   {[cleanup]commands}
 
 [travis]
