Enforce --branch coverage too (was already passing).

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ commands =
 changedir = {toxinidir}
 deps = coverage
 commands =
-  coverage run runtests.py --blacklist integration
+  coverage run --branch runtests.py --blacklist integration
   coverage report -m --fail-under=100
   {[cleanup]commands}
 
