fix test coverage decrease in prev commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ fail_under = 100
 exclude_lines =
 	pragma: no cover
 	def __repr__
+	if T\.TYPE_CHECKING
+	TT\.Protocol
 
 [coverage:run]
 branch = True
