Upgrade options for isort to be 5.0 compatible.

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ commands =
 changedir = {toxinidir}
 deps = isort
 commands =
-  isort --recursive --check-only --diff conllu tests
+  isort --check-only --diff conllu tests
   {[cleanup]commands}
 
 [testenv:coverage]
