Add mypy to CI.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 [tox]
 envlist =
   py36,py37,py38
-  coverage,flake8,isort
+  coverage,flake8,isort,mypy
 
 [testenv]
 whitelist_externals =
@@ -48,11 +48,16 @@ commands =
   coverage report -m --fail-under=100
   {[cleanup]commands}
 
+[testenv:mypy]
+# Note: Settings for coverage exists in the setup.cfg file
+changedir = {toxinidir}
+deps = mypy
+commands =
+  mypy .
+  {[cleanup]commands}
+
 [travis]
 python =
-  2.7: py27
-  3.4: py34
-  3.5: py35
   3.6: py36
   3.7: py37
-  3.8: py38, coverage, flake8, isort
+  3.8: py38, coverage, flake8, isort, mypy
