Test in 3.9 too (no changes needed).

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 envlist =
-  py36,py37,py38
+  py36,py37,py38,py39
   coverage,flake8,isort,mypy
 
 [testenv]
@@ -60,4 +60,5 @@ commands =
 python =
   3.6: py36
   3.7: py37
-  3.8: py38, coverage, flake8, isort, mypy
+  3.8: py38
+  3.9: coverage, flake8, isort, mypy
