--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -18,9 +18,9 @@ chardet==4.0.0
     # via requests
 colorama==0.4.4
     # via twine
-coverage==5.4
+coverage==5.5
     # via -r requirements-dev.in
-cryptography==3.4.4
+cryptography==3.4.6
     # via secretstorage
 distlib==0.3.1
     # via virtualenv
@@ -30,25 +30,29 @@ filelock==3.0.12
     # via
     #   tox
     #   virtualenv
-flake8==3.8.4
+flake8==3.9.0
     # via -r requirements-dev.in
 idna==2.10
     # via requests
+importlib-metadata==3.7.3
+    # via
+    #   keyring
+    #   twine
 iniconfig==1.1.1
     # via pytest
-isort==5.7.0
+isort==5.8.0
     # via -r requirements-dev.in
 jeepney==0.6.0
     # via
     #   keyring
     #   secretstorage
-keyring==22.0.1
+keyring==23.0.0
     # via twine
 mccabe==0.6.1
     # via flake8
 mypy-extensions==0.4.3
     # via mypy
-mypy==0.800
+mypy==0.812
     # via -r requirements-dev.in
 packaging==20.9
     # via
@@ -65,19 +69,19 @@ py==1.10.0
     # via
     #   pytest
     #   tox
-pycodestyle==2.6.0
+pycodestyle==2.7.0
     # via flake8
 pycparser==2.20
     # via cffi
-pyflakes==2.2.0
+pyflakes==2.3.0
     # via flake8
-pygments==2.7.4
+pygments==2.8.1
     # via readme-renderer
 pyparsing==2.4.7
     # via packaging
 pytest==6.2.2
     # via -r requirements-dev.in
-readme-renderer==28.0
+readme-renderer==29.0
     # via twine
 requests-toolbelt==0.9.1
     # via twine
@@ -99,24 +103,23 @@ toml==0.10.2
     # via
     #   pytest
     #   tox
-tox==3.21.4
+tox==3.23.0
     # via -r requirements-dev.in
-tqdm==4.56.2
+tqdm==4.59.0
     # via twine
-twine==3.3.0
+twine==3.4.1
     # via -r requirements-dev.in
 typed-ast==1.4.2
     # via mypy
 typing-extensions==3.7.4.3
     # via mypy
-urllib3==1.26.3
+urllib3==1.26.4
     # via requests
-virtualenv==20.4.2
+virtualenv==20.4.3
     # via tox
 webencodings==0.5.1
     # via bleach
 wheel==0.36.2
     # via -r requirements-dev.in
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
+zipp==3.4.1
+    # via importlib-metadata
