--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -1,8 +1,6 @@
 name: Run tests for all supported python versions
 
-on:
-  push:
-  workflow_dispatch:
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
