--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 envlist =
-  py36,py37,py38,py39
+  py36,py37,py38,py39,py310
   coverage,flake8,isort,mypy
 
 [testenv]
@@ -57,8 +57,10 @@ commands =
   {[cleanup]commands}
 
 [gh-actions]
+# Note: coverage runs the tests, so no need for py<version> on the last row
 python =
   3.6: py36
   3.7: py37
   3.8: py38
-  3.9: coverage, flake8, isort, mypy
+  3.9: py39
+  3.10: coverage, flake8, isort, mypy
