--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ logging-level = ERROR
 universal = 1
 
 [metadata]
-license_file = LICENSE
+license_files = LICENSE
 
 [coverage:report]
 fail_under = 100
