Use modern allowlist instead of whitelist.

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist =
   coverage,flake8,isort,mypy
 
 [testenv]
-whitelist_externals =
+allowlist_externals =
   find
 setenv =
   PYTHONWARNINGS=once::DeprecationWarning
