--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@
 envlist =
   py36,py37,py38,py39,py310
   coverage,flake8,isort,mypy
+requires =
+    virtualenv<=20.21.1
 
 [testenv]
 allowlist_externals =
