--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -33,6 +33,10 @@ filelock==3.15.4
     #   tox
     #   virtualenv
 flake8==7.1.0
+    # via
+    #   -r requirements-dev.in
+    #   flake8-pyproject
+flake8-pyproject==1.2.3
     # via -r requirements-dev.in
 idna==3.7
     # via requests
