--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,9 @@ commands =
 [testenv:flake8]
 # Note: Settings for flake8 exists in the setup.cfg file
 changedir = {toxinidir}
-deps = flake8
+deps =
+  flake8
+  flake8-pyproject
 commands =
   flake8 conllu tests
   {[cleanup]commands}
