Seems I need isolated build for pyproject.

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
   coverage,flake8,isort,mypy
 requires =
     virtualenv<=20.21.1
+isolated_build = True
 
 [testenv]
 allowlist_externals =
