Add py310 and fail on no env.

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,16 @@ envlist =
   coverage,flake8,isort,mypy
 requires =
     virtualenv<=20.21.1
+
+[gh-actions]
+# Note: coverage runs the tests, so no need for py<version> on the last row
+python =
+  3.6: py36
+  3.7: py37
+  3.8: py38
+  3.9: py39
+  3.10: py310, coverage, flake8, isort, mypy
+fail_on_no_env = True
 isolated_build = True
 
 [testenv]
@@ -60,12 +70,3 @@ deps = mypy
 commands =
   mypy .
   {[cleanup]commands}
-
-[gh-actions]
-# Note: coverage runs the tests, so no need for py<version> on the last row
-python =
-  3.6: py36
-  3.7: py37
-  3.8: py38
-  3.9: py39
-  3.10: coverage, flake8, isort, mypy
