Put envs on separate lines and match GHA versions.

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,15 @@
 
 [tox]
 envlist =
-  py36,py37,py38,py39,py310
-  coverage,flake8,isort,mypy
+  py36
+  py37
+  py38
+  py39
+  py310
+  coverage
+  flake8
+  isort
+  mypy
 requires =
     virtualenv<=20.21.1
 isolated_build = True
@@ -18,7 +25,7 @@ python =
   3.7: py37
   3.8: py38
   3.9: py39
-  3.10: py310, coverage, flake8, isort, mypy
+  3.10: coverage, flake8, isort, mypy
 fail_on_no_env = True
 
 [testenv]
