--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ envlist =
   isort
   mypy
 requires =
-    virtualenv<=20.21.1
+  virtualenv<=20.21.1
 isolated_build = True
 
 [gh-actions]
@@ -29,51 +29,40 @@ python =
 fail_on_no_env = True
 
 [testenv]
-allowlist_externals =
-  find
-setenv =
-  PYTHONWARNINGS=once::DeprecationWarning
-commands =
-  python runtests.py
-
-[cleanup]
-commands =
-  find {toxinidir}/conllu -type f -name "*.pyc" -delete
-  find {toxinidir}/conllu -type d -name "__pycache__" -delete
-  find {toxinidir} -type f -path "*.egg-info*" -delete
-  find {toxinidir} -type d -path "*.egg-info" -delete
+package = wheel
+wheel_build_env = .pkg
+deps = pytest
+commands = python -m pytest {posargs}
 
 [testenv:flake8]
-# Note: Settings for flake8 exists in the setup.cfg file
+# Note: Settings for flake8 exists in the pyproject.toml file
 changedir = {toxinidir}
 deps =
   flake8
   flake8-pyproject
 commands =
   flake8 conllu tests
-  {[cleanup]commands}
 
 [testenv:isort]
-# Note: Settings for isort exists in the setup.cfg file
+# Note: Settings for isort exists in the pyproject.toml file
 changedir = {toxinidir}
 deps = isort
 commands =
   isort --check-only --diff conllu tests
-  {[cleanup]commands}
 
 [testenv:coverage]
-# Note: Settings for coverage exists in the setup.cfg file
+# Note: Settings for coverage exists in the pyproject.toml file
 changedir = {toxinidir}
-deps = coverage
+deps = pytest-coverage
 commands =
-  coverage run --branch runtests.py --blacklist integration
+  coverage run --branch -m pytest -m "not integration"
   coverage report -m --fail-under=100
-  {[cleanup]commands}
 
 [testenv:mypy]
-# Note: Settings for coverage exists in the setup.cfg file
+# Note: Settings for coverage exists in the pyproject.toml file
 changedir = {toxinidir}
-deps = mypy
+deps =
+  mypy
+  pytest
 commands =
   mypy .
-  {[cleanup]commands}
