--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,16 @@ package = wheel
 wheel_build_env = .pkg
 deps = pytest
 commands = python -m pytest {posargs}
+basepython =
+  py36: python3.6
+  py37: python3.7
+  py38: python3.8
+  py39: python3.9
+  py310: python3.10
+  coverage: python3.10
+  flake8: python3.10
+  isort: python3.10
+  mypy: python3.10
 
 [testenv:flake8]
 # Note: Settings for flake8 exists in the pyproject.toml file
