--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install virtualenv==20.21.1
         python -m pip install tox tox-gh-actions
     - name: Run tests
       run: tox
