Add explicit suppor for 3.11 and 3.12.

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ envlist =
   py38
   py39
   py310
+  py311
+  py312
   coverage
   flake8
   isort
@@ -19,7 +21,9 @@ isolated_build = True
 python =
   3.8: py38
   3.9: py39
-  3.10: coverage, flake8, isort, mypy
+  3.10: py310
+  3.11: py311
+  3.12: coverage, flake8, isort, mypy
 fail_on_no_env = True
 
 [testenv]
@@ -31,10 +35,12 @@ basepython =
   py38: python3.8
   py39: python3.9
   py310: python3.10
-  coverage: python3.10
-  flake8: python3.10
-  isort: python3.10
-  mypy: python3.10
+  py311: python3.11
+  py312: python3.12
+  coverage: python3.12
+  flake8: python3.12
+  isort: python3.12
+  mypy: python3.12
 
 [testenv:flake8]
 # Note: Settings for flake8 exists in the pyproject.toml file
