--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,3 +67,10 @@ line_length = 119
 multi_line_output = 5
 include_trailing_comma = true
 known_first_party = ["conllu", "tests"]
+
+[tool.mypy]
+check_untyped_defs = true
+exclude = [
+    'tests',
+    'build',
+]
